[gd_scene load_steps=63 format=2]

[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://RadialGradient.png" type="Texture" id=2]
[ext_resource path="res://Managing/SoundManager.gd" type="Script" id=3]
[ext_resource path="res://UI/Assets/ui.png" type="Texture" id=4]
[ext_resource path="res://Managing/SoundManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Player/Assets/player_sheet.png" type="Texture" id=6]
[ext_resource path="res://World/VisualEffects/Smoke.png" type="Texture" id=7]
[ext_resource path="res://Entities/Player/Scripts/Player.gd" type="Script" id=8]
[ext_resource path="res://Entities/Player/Scripts/ItemManagement.gd" type="Script" id=9]
[ext_resource path="res://Entities/Player/Assets/PlayerIdle.tres" type="Animation" id=10]
[ext_resource path="res://Entities/Player/AddAbilities.gd" type="Script" id=11]
[ext_resource path="res://UI/Assets/HealHeartFull.png" type="Texture" id=12]
[ext_resource path="res://UI/Assets/vignette.png" type="Texture" id=13]
[ext_resource path="res://Entities/Player/grayscale.shader" type="Shader" id=14]
[ext_resource path="res://Entities/Player/Assets/Vignette.tres" type="Material" id=15]
[ext_resource path="res://Entities/Player/Assets/Hand.png" type="Texture" id=16]
[ext_resource path="res://Entities/Player/Assets/Hit.wav" type="AudioStream" id=17]
[ext_resource path="res://Entities/Player/Assets/Walk.wav" type="AudioStream" id=18]
[ext_resource path="res://Entities/Player/Heal.gd" type="Script" id=19]
[ext_resource path="res://Entities/Player/Assets/Jump.wav" type="AudioStream" id=20]
[ext_resource path="res://Entities/Player/Assets/Arm1.png" type="Texture" id=21]
[ext_resource path="res://Entities/Player/StaminaBar.gd" type="Script" id=22]
[ext_resource path="res://UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=23]
[ext_resource path="res://UI/DebugConsole/DebugConsole.tscn" type="PackedScene" id=24]
[ext_resource path="res://UI/GameOverlay/GameOverlay.tscn" type="PackedScene" id=25]
[ext_resource path="res://UI/GameOver/GameOver.tscn" type="PackedScene" id=26]
[ext_resource path="res://UI/Inventory/Inventory.tscn" type="PackedScene" id=27]
[ext_resource path="res://Entities/Player/Camera/Camera.tscn" type="PackedScene" id=28]
[ext_resource path="res://Entities/Enemies/DamageBoostPickup/Pickup.png" type="Texture" id=29]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Shader" id=32]
code = "shader_type canvas_item;

uniform float is_on = 0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, vec4(1, 1, 1, 1), color.a * is_on);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 32 )
shader_param/is_on = 0.0

[sub_resource type="CanvasItemMaterial" id=34]
blend_mode = 1

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:show_behind_parent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=35]
resource_name = "Spin"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 2.37841, 0.732043, 1.93187, 0.378929 ),
"update": 0,
"values": [ Vector2( -10, -7 ), Vector2( 1, -8 ), Vector2( 9, -14 ), Vector2( -2, -12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:show_behind_parent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 7 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 3.0
height = 0.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 1.5 )

[sub_resource type="CanvasItemMaterial" id=28]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=30]
offsets = PoolRealArray( 0.155251, 0.246575, 0.552511, 0.872146, 1 )
colors = PoolColorArray( 0.148929, 0.115738, 0.722656, 1, 0.784668, 0.343292, 0.343292, 1, 0.684326, 0.182851, 0.0695844, 1, 0.862745, 0.772549, 0.0509804, 1, 0.862745, 0.772549, 0.0509804, 0 )

[sub_resource type="GradientTexture" id=31]
gradient = SubResource( 30 )

[sub_resource type="ParticlesMaterial" id=27]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 12.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color_ramp = SubResource( 31 )
anim_speed = 1.0

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float darkness;
uniform sampler2D vignette;
uniform vec4 color : hint_color;

void fragment() {
	vec3 vignetteColor = texture(vignette, UV).rgb;
	vignetteColor += darkness;
	
	COLOR.a = 1.0-clamp(vignetteColor.r, 0.0, 1.0);
	COLOR.rgb = color.rgb;
}
"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/darkness = 0.489
shader_param/color = Color( 1, 0, 0, 1 )
shader_param/vignette = ExtResource( 13 )

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 9 )
shader_param/darkness = 0.6
shader_param/color = Color( 0, 1, 0.866667, 1 )
shader_param/vignette = ExtResource( 13 )

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 14 )
shader_param/strength = 1.0

[sub_resource type="CanvasItemMaterial" id=33]
light_mode = 1

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 124, 65, 11, 11 )

[sub_resource type="Animation" id=15]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=16]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.366021, 1 ),
"update": 1,
"values": [ 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite/Arm:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite/Arm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -7, 1 ), Vector2( -7, 2 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("DoubleJumpParticles/DoubleJump1")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("DoubleJumpParticles/DoubleJump2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DoubleJumpParticles/DoubleJump1:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DoubleJumpParticles/DoubleJump2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DoubleJumpParticles/DoubleJump1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DoubleJumpParticles/DoubleJump2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -5, 1 ), Vector2( -5, 2 ), Vector2( -5, 1 ), Vector2( -5, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper/Sprite/Arm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -7, 3 ), Vector2( -7, 1 ), Vector2( -7, 2 ), Vector2( -7, 3 ), Vector2( -7, 1 ), Vector2( -7, 2 ) ]
}

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DoubleJumpParticles/DoubleJump1:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DoubleJumpParticles/DoubleJump2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DoubleJumpParticles/DoubleJump1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DoubleJumpParticles/DoubleJump2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 2 ) ],
"method": "add_walk_particles"
}, {
"args": [ Vector2( 0, 2 ) ],
"method": "add_walk_particles"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScaleHelper/Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScaleHelper/Sprite/Arm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -7, 3 ), Vector2( -7, 1 ), Vector2( -7, 1 ), Vector2( -7, 2 ), Vector2( -7, 1 ), Vector2( -7, 1 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("Sounds/WalkSFX")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=21]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite/Arm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -19, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper/Sprite/Arm:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=22]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.8, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite:material:shader_param/is_on")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=23]
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:material:shader_param/is_on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper/Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScaleHelper:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:material:shader_param/is_on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 3, 6 ), Vector2( 0, 5 ) ]
}

[sub_resource type="Environment" id=37]
background_mode = 4
ambient_light_sky_contribution = 0.0
dof_blur_far_distance = 10.43
dof_blur_far_transition = 0.01
dof_blur_far_amount = 1.0
dof_blur_far_quality = 0
dof_blur_near_distance = 1.39
dof_blur_near_transition = 0.01
dof_blur_near_amount = 0.04
glow_enabled = true
glow_strength = 0.3
glow_bloom = 0.33
glow_blend_mode = 1
glow_hdr_scale = 3.0

[node name="Player" type="KinematicBody2D" groups=["Player"]]
material = SubResource( 2 )
position = Vector2( 0, -3 )
collision_layer = 0
collision_mask = 25
script = ExtResource( 8 )

[node name="Flashlight" type="Light2D" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 2 )
texture_scale = 0.3
color = Color( 0.976471, 0.941176, 0.682353, 1 )
energy = 0.6
shadow_enabled = true
shadow_gradient_length = 1.0
shadow_filter = 1
shadow_filter_smooth = 5.0

[node name="ScaleHelper" type="Node2D" parent="."]
position = Vector2( 0, 5 )

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
material = SubResource( 4 )
position = Vector2( 0, -15 )
scale = Vector2( 1, 0.969635 )
texture = ExtResource( 6 )
offset = Vector2( -5, 1 )
flip_h = true
hframes = 6
vframes = 6
frame = 13

[node name="Arm" type="Sprite" parent="ScaleHelper/Sprite"]
use_parent_material = true
position = Vector2( -7, 2 )
texture = ExtResource( 21 )
centered = false
offset = Vector2( 0.5, 0 )

[node name="Hand" type="Sprite" parent="ScaleHelper/Sprite/Arm"]
use_parent_material = true
position = Vector2( 11.9299, 2.84134 )
texture = ExtResource( 16 )
offset = Vector2( 0.5, 0 )

[node name="SpinningOrb" type="Sprite" parent="ScaleHelper"]
visible = false
material = SubResource( 34 )
position = Vector2( -10, -7 )
texture = ExtResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScaleHelper/SpinningOrb"]
autoplay = "Spin"
anims/RESET = SubResource( 36 )
anims/Spin = SubResource( 35 )

[node name="Light2D" type="Light2D" parent="ScaleHelper/SpinningOrb"]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
texture_scale = 0.05
color = Color( 1, 0, 0, 1 )

[node name="Light2D2" type="Light2D" parent="ScaleHelper/SpinningOrb"]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
texture_scale = 0.05
color = Color( 1, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 5 )

[node name="Sounds" type="Node2D" parent="."]

[node name="HurtSFX" type="Node2D" parent="Sounds"]
script = ExtResource( 3 )
audio = ExtResource( 17 )
volumeMod = -10.0
bus = "SFX"

[node name="WalkSFX" parent="Sounds" instance=ExtResource( 5 )]
audio = ExtResource( 18 )
volumeMod = -5.0
pitchShiftRange = 1.2
bus = "Reverb"

[node name="JumpSFX" parent="Sounds" instance=ExtResource( 5 )]
audio = ExtResource( 20 )
volumeMod = 5.0
pitchShiftRange = 1.2
bus = "Reverb"

[node name="Hurtbox" parent="." groups=["player"] instance=ExtResource( 1 )]
visible = false
collision_layer = 2
collision_mask = 2147483648
immTime = 0.2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 6 )

[node name="FloorChecker" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorChecker"]
position = Vector2( 0, 3.5 )
shape = SubResource( 8 )

[node name="TileCheckers" type="Node2D" parent="."]
visible = false

[node name="BottomTileChecker" type="RayCast2D" parent="TileCheckers"]
enabled = true
cast_to = Vector2( 6, 0 )

[node name="TopTileChecker" type="RayCast2D" parent="TileCheckers"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="ItemHolder" type="Node2D" parent="."]
position = Vector2( 0, -10 )

[node name="Camera" parent="." instance=ExtResource( 28 )]
visible = false
trackNodePath = NodePath("..")

[node name="DoubleJumpParticles" type="Node2D" parent="."]

[node name="DoubleJump1" type="Particles2D" parent="DoubleJumpParticles"]
visible = false
material = SubResource( 28 )
position = Vector2( -6, 1 )
emitting = false
amount = 12
one_shot = true
explosiveness = 1.0
fixed_fps = 16
local_coords = false
process_material = SubResource( 27 )
texture = ExtResource( 7 )

[node name="DoubleJump2" type="Particles2D" parent="DoubleJumpParticles"]
visible = false
material = SubResource( 28 )
position = Vector2( 3, 1 )
emitting = false
amount = 12
one_shot = true
explosiveness = 1.0
fixed_fps = 16
local_coords = false
process_material = SubResource( 27 )
texture = ExtResource( 7 )

[node name="Abilities" type="Node" parent="."]
script = ExtResource( 11 )

[node name="ItemManagement" type="Node" parent="."]
script = ExtResource( 9 )
itemHolderPath = NodePath("../ItemHolder")

[node name="APressWindow" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.115
one_shot = true

[node name="DropDownTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Vignette" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.643137 )
material = ExtResource( 15 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthVig" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealVig" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrayScaleDeath" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 12 )
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverlay" parent="CanvasLayer" instance=ExtResource( 25 )]

[node name="Inventory" parent="CanvasLayer" instance=ExtResource( 27 )]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 23 )]
visible = false
mouse_filter = 2

[node name="DebugConsole" parent="CanvasLayer" instance=ExtResource( 24 )]
visible = false
mouse_filter = 2

[node name="GameOver" parent="CanvasLayer" instance=ExtResource( 26 )]
visible = false

[node name="Stamina" type="HBoxContainer" parent="."]
margin_left = -24.0
margin_top = -30.0
margin_right = 24.0
margin_bottom = -25.0
custom_constants/separation = 1
alignment = 1
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegainTimer" type="Timer" parent="Stamina"]
wait_time = 3.0

[node name="HealProgress" type="TextureProgress" parent="."]
visible = false
material = SubResource( 33 )
margin_left = -6.0
margin_top = -34.0
margin_right = 5.0
margin_bottom = -23.0
max_value = 1003.0
step = 0.001
texture_under = SubResource( 14 )
texture_progress = ExtResource( 12 )
fill_mode = 4
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Listener" type="Listener2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Dead = SubResource( 15 )
anims/Die = SubResource( 16 )
anims/DoubleJump = SubResource( 17 )
anims/Idle = ExtResource( 10 )
anims/Jump = SubResource( 19 )
anims/RESET = SubResource( 29 )
anims/Run = SubResource( 20 )
anims/WallSlide = SubResource( 21 )

[node name="SquashAndStretch" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 22 )
anims/Jump = SubResource( 23 )
anims/Land = SubResource( 24 )

[node name="Flash" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 25 )
anims/flash = SubResource( 26 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 37 )

[connection signal="timeout" from="APressWindow" to="." method="_on_a_press_window_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="DropDownTimer" to="." method="set_collision_mask_bit" binds= [ 4, true ]]

[editable path="Hurtbox"]
